--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,8 @@
     display: flex;
     justify-content: center; /* Centers the content horizontally */
     align-items: center; /* Centers the content vertically if needed */
+    width: 100%;
+    overflow-x: hidden;
   }
   
   .footer-icons a {
